# practice5

./: Dockerfile.backend  Dockerfile.db  build_agent.sh  docker-compose.yml  nginx.conf
nosql/: CMakeLists.txt  HashMap.h  HashMapImpl.h  JsonParser.cpp  JsonParser.h  NosqlDbms.cpp  NosqlDbms.h  QueryCondition.cpp  QueryCondition.h  VectorImpl.h  client_main.cpp  collection.cpp  collection.h  database.cpp  database.h  db_client.cpp  db_client.h  db_server.cpp  db_server.h  document.cpp  document.h  event_processor.cpp  event_processor.h  inotify_wrapper.cpp  inotify_wrapper.h  main.cpp  network_protocol.cpp  network_protocol.h  persistent_buffer.cpp  persistent_buffer.h  server_main.cpp  siem_agent.cpp  siem_agent.h  siem_agent_main.cpp  siem_config.json  vector.h
web/: requirements.txt
web/app/: auth.py  config.py  database.py  main.py  models.py  routes.py  utils.py
web/frontend/: dashboard.html  events.html  login.html
web/frontend/css/: style.css
web/frontend/js/: common.js  dashboard.js  events.js  login.js
